# ospray_studio

./: .gitignore  .gitmodules
app/: CMakeLists.txt
plugins/streamer_plugin/: CMakeLists.txt  PanelStreamer.cpp  PanelStreamer.h  Util.h  plugin_streamer.cpp
plugins/streamer_plugin/async-sockets/: basesocket.hpp  tcpserver.hpp  tcpsocket.hpp
plugins/streamer_plugin/async-sockets-wins/: basesocket.hpp  tcpserver.hpp  tcpsocket.hpp
plugins/streamer_plugin/generator/: Axes.cpp  Gestures.cpp
plugins/voice_plugin/: CMakeLists.txt  PanelVoice.cpp  PanelVoice.h  README.md  plugin_voice.cpp
plugins/voice_plugin/npy/: CMakeLists.txt  README.md
plugins/voice_plugin/request/: RequestManager.cpp  RequestManager.h
